# hrms

./: .gitignore  CMakeLists.txt  DataView.py  EmployeesNew.xlsx  README.md  data_view.py  doc_gen.py  employees_new.xlsx  filter_add.py  main.py  proposal.txt  requirements.txt  run.sh  salary_management.py  svatprj.xlsx
.github/workflows/: cmake.yaml  general.yaml  python-app.yaml  yapf-format.yaml
DataView/data/: EmployeesTest.xlsx
DataView/tests/: TestDFAugmenter.py  TestExcelIO.py  TestPandasHelpers.py
DataView/util/: DFAugmenter.py  ExcelIO.py  PandasHelpers.py
face_recog/: extract_embeddings.py  recognizer.py  train_model.py
face_recog/output/: embeddings.pickle  recognizer.pickle
include/: example.h  example_2.h
junit/: test-results.xml
lib/: example.cpp  example_2.cpp  main.py
source/: main.py
tests/: CMakeLists.txt  test_example.cpp  test_example_2.cpp  test_main.py
